setup/resources/install/post-install/kfserving/0.5.0-rc2/https/legacy/vs-centraldashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
  generation: 1
  labels:
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/name: centraldashboard
  name: centraldashboard
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        # prefix: /dashboard
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: centraldashboard.kubeflow.svc.cluster.local
        port:
          number: 80
